<resources>
    <string name="app_name">CoeliacApp</string>
    <string name="error_webservice">Error al consultar servidor.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_location">Error al obtener ubicación.</string>
    <string name="title_near_discounts">Descuentos cercanos</string>
    <string name="title_view_discount">Ver descuento</string>
    <string name="shop">Comercio</string>
    <string name="product">Productos</string>
    <string name="details">Detalles</string>
    <string name="termsAndConditions">Términos y condiciones</string>
    <string name="description">Descripción</string>
    <string name="availableQuantity">Cantidad disponible</string>
    <string name="units">unidades</string>
    <string name="searchProductsButtonText">Productos</string>
    <string name="searchShopsButtonText">Comercios</string>
    <string name="show_config">Configuración</string>
    <string name="search_distance">Distancia de búsqueda</string>
    <string name="distance_unit">km</string>
    <string name="cfg_set">Configuración actualizada</string>
    <string name="more_info">Clickea para obtener mas informacion</string>
    <string name="error_product_not_found">Producto no encontrado</string>
    <string name="barcode_reader">Lector de código de barras</string>
    <string name="search_title">Búsqueda</string>
    <string name="search_shop_title">Búsqueda de comercios</string>
    <string name="search_product_title">Búsqueda de productos</string>
    <string name="shop_detail_title">Ver comercio</string>
    <string name="product_detail_title">Ver producto</string>
    <string name="next">Siguiente</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Ok</string>
    <string name="location">"Ubicacion: "</string>
    <string name="no_results_found">No se encontraron resultados</string>
    <string name="use_gps">Usar localizacion GPS</string>
    <string name="location_button">Ubicacion</string>
    <string name="select_product">Seleccionar producto</string>
    <string name="delete">Borrar</string>
    <string name="sells_product">Que venda producto</string>
    <string name="map">Mapa</string>
    <string name="map_settings">Ajustes de mapa</string>
    <string name="selected_product">Producto seleccionado:</string>
    <string name="facebook_app_id">1795201244082395</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_fb">LoginFbActivity</string>
    <string name="action_show_access_token_title">Print Access Token</string>
    <string name="action_bypass_login">Bypass login</string>
    <string name="no_discounts">No hay descuentos cercanos.</string>
    <string name="permission_denied">Permiso denegado</string>
    <string name="location_precision_not_enough">Precisión solicitada no satisfecha. La funcionalidad puede no funcionar como se espera.</string>
    <string name="manage_session">Administrar sesión</string>
</resources>
